2002-11-25    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/views.py (ViewableForm.handleError): made it
	work with FormError lists.

	* pylibs/formlib/validates.py: changed the validation routines
	to use FormError lists.

	* pylibs/formlib/form.py (Form.validate): errors is now a
	FieldContainer storing lists of FormErrors for every field.

	* pylibs/formlib/views.py (ViewableForm.getView): made form view
	work with a list of errors returned for a field rather than a
	single one. 

	* pylibs/formlib/dispatcher.py (LinearFlowManager.next): removed
	unnecessary End class, and permit a Goto with a null formname.

	* test/formlib/htdocs/test{1-4}.pyinc: changed value view_attr to
	default in several places; changed validation to use FormErrors.

2002-11-24  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/pickleProps.py: several typo corrections.

2002-11-24  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/htdocs/testValidates.pyinc: added test for required
	IntField, DoubleField and DateField

	* test/formlib/htdocs/testAllViews.pyinc: added tests of required
	fields for TextField and ButtonGroupField

	* pylibs/formlib/views.py (ViewableField.__init__): added raising
	of ValueError if 'value' key is present in view_attrs: setting
	value on a Viewable item during construction conflicts with the
	notion of a default value and introduces programmer confusion into
	the forms API

	* pylibs/formlib/__init__.py: added import of all from validates
	module

	* pylibs/formlib/validates.py: added superclass validation check
	to IntField, DoubleField and DateField

	* pylibs/formlib/views.py: added support for required fields to
	ViewableField and ViewableDomainField
	

2002-11-23  James Richards  <jrichards@satie.wnyc.org>

	* testAllViews.pyinc (fields): Removing setting of value in view
	attributes

2002-11-23    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/form.py (FormDispatcher.dispatch): first stab at a